# market-reporter

./: .coveragerc  .dockerignore  .gitignore  .isort.cfg  Dockerfile  Makefile  Pipfile  README.md  environment-fixed.yaml  environment.yaml  example.toml  gulpfile.js  murakami-et-al-2017.example.toml  package.json  setup.cfg  setup.py  setup.sh  supervisord.conf
.circleci/: config.yml
ai/: architecture.ai  logo.ai
docs/: README-ja.md  icon-credit-ja.md  icon-credit.md
docs/pics/: logo.ai
envs/: Dockerfile  ansible.cfg  docker-compose.yaml  ec2-vars.yaml  hosts.example  nginx.conf  playbook.yaml  startup.sh  supervisord.conf  uwsgi.ini
fag/: __main__.py  main.py
fag/core/: network.py  train.py
fag/database/: misc.py  read.py  write.py
fag/postprocessing/: text.py
fag/preprocessing/: dataset.py  text.py
fag/resource/: reuters.py  s3.py
fag/util/: config.py  conversion.py  logging.py  tool.py
fag/webapp/: __init__.py  __main__.py  chart.py  human_evaluation.py  search.py  table.py
figures/ai/: architecture.ai  favicon.ai  gloss.ai  logo.ai  poster.ai
javascripts/: fonts.list  gulpfile.js  package.json
latex/figures/: draw-graphs.sh
pics/ai/: architecture.ai  favicon.sh
pics/latex/: .gitignore  gloss.tex  latexmkrc
reporter/: __main__.py  main.py  predict.py
reporter/core/: network.py  operation.py  train.py
reporter/database/: model.py  read.py  write.py
reporter/postprocessing/: bleu.py  export.py  text.py
reporter/preprocessing/: dataset.py  number.py  text.py
resources/: ric.csv  stock-exchanges.json  user-dict.csv
(+46 files in other folders)
