[metadata]
name = market-reporter
description = Automatic Generation of Brief Summaries of Time-Series Data
version = attr: reporter.__version__
author = Akira Miyazawa, Tatsuya Aoki, Fumiya Yamamoto, Soichiro Murakami, and Akihiko Watanabe
author_email = miyazawa-a@nii.ac.jp, aoki@lr.pi.titech.ac.jp
url = https://github.com/aistairc/market-reporter

[flake8]
max-line-length = 120

[isort]
multi_line_output = 3
known_third_party=
    boto3
    botocore
    flask
    flask_sqlalchemy
    janome,
    jsonlines
    mojimoji
    nltk
    sass
    toml
    torch
    torchtext

[tool:pytest]
addopts = --verbose --cov=reporter
